--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 gdal = { version = "0.17.1", features = ["bindgen"] }
+clap = { version = "4.5.29", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+validator = { version = "0.20.0", features = ["derive"] }
+serde_json = "1.0"
