--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde = { version = "1.0", features = ["derive"] }
 validator = { version = "0.20.0", features = ["derive"] }
 serde-inline-default = "0.2.3"
 serde_json = "1.0"
+regex = "1.11.1"
