--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ validator = { version = "0.20.0", features = ["derive"] }
 serde-inline-default = "0.2.3"
 serde_json = "1.0"
 regex = "1.11.1"
+threadpool = "1.8.1"
+num_cpus = "1.16.0"
