--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde_json = "1.0"
 regex = "1.11.1"
 num_cpus = "1.16.0"
 tempfile = "3.17.1"
+tera = { version = "1.20.0", default-features = false }
